<resources>
    <string name="app_name">InstaPost</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_not_member">Not yet a member?</string>
    <string name="text_register">Register</string>
    <string name="text_already_member">Already a Member? Login</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="hint_username">Name</string>
    <string name="hint_nic">Nick Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_select">Select Image</string>
    <string name="text_upload">Upload</string>
    <string name="hint_hash">HashTag</string>
    <string name="hint_name">Description (Optional)</string>
    <string name="text_add">Add HashTag</string>
    <string name="new_hashtag">To create a new Hashtag, Simply enter the name the (#) sign will be added automatically
    </string>

</resources>
