<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".newPost.NewPost">
    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/selectImage"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_select"/>

        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imageHolder"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/hot"/>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput"
                android:layout_width="match_parent"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

            <EditText
                    android:id="@+id/descriptionData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
                android:text="@string/new_hashtag"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputHolder"
                android:layout_width="match_parent"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content"
                >

            <EditText
                    android:id="@+id/hashtagName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_hash"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>
        <ProgressBar android:layout_width="match_parent" android:layout_height="30dp"
                     android:id="@+id/mProgress"/>
        <android.support.v7.widget.AppCompatButton
                android:id="@+id/upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:background="@color/colorTextHint"
                android:text="@string/text_upload"/>

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>